--- a/css/theme-dcube.css
+++ b/css/theme-dcube.css
@@ -401,17 +401,27 @@ button {
   color: #171745;
 }
 
-.tool-bar-elt {
+.tool-bar-elt.btn {
   border: #fff 1px transparent;
 }
 
-.tool-bar-elt:hover,
-.tool-bar-elt:focus {
+.tool-bar-elt.btn:hover,
+.tool-bar-elt.btn:focus,
+.tool-bar-elt .btn:hover,
+.tool-bar-elt .btn:hover {
   border: #fff 1px solid !important;
 }
 
-.tool-bar-elt .icon {
-  color: white;
+.inv-c .tool-bar-elt.btn:hover,
+.inv-c .tool-bar-elt.btn:focus,
+.inv-c .tool-bar-elt .btn:hover,
+.inv-c .tool-bar-elt .btn:hover {
+  border: #ff0 1px solid !important;
+}
+@media screen and (min-width: 50em) {
+  .tool-bar-elt .icon {
+    color: white;
+  }
 }
 
 /*.high-c .icon{
@@ -2151,6 +2161,7 @@ blockquote cite {
   background: #171745;
   transition: all ease 0.5s;
   opacity: 1;
+  z-index: 99999;
 }
 
 .high-c .tool-bar,
@@ -2209,10 +2220,12 @@ blockquote cite {
   transition: all 0.2s ease;
 }
 
-.btn:focus .icon,
-.btn:hover .icon {
-  /*opacity:0.5;*/
-  color: #fff;
+@media screen and (min-width: 50em) {
+  .btn:focus .icon,
+  .btn:hover .icon {
+    /*opacity:0.5;*/
+    color: #fff;
+  }
 }
 
 .high-c .btn:focus .icon,
@@ -2244,7 +2257,6 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  color: #444;
   margin: 0;
   background-color: #171745;
   color: #fff;
@@ -2279,6 +2291,27 @@ select {
   border-radius: 0 3px 3px 0;
 }
 
+#contrastSelect {
+  color: #171745 !important;
+  background-color: #fff;
+  border: 1px solid #171745;
+}
+
+#contrastSelect option {
+  color: #171745;
+}
+
+.high-c #contrastSelect {
+  background-color: #f2f3f4 !important;
+  color: #131516 !important;
+  border-color: transparent !important;
+}
+
+.inv-c #contrastSelect {
+  color: #ff0 !important;
+  border: 1px solid #ff0 !important;
+}
+
 .high-c .custom-select::before {
   background-color: #f2f3f4;
   color: #fff;
@@ -2286,6 +2319,7 @@ select {
 
 .inv-c .custom-select::before {
   background-color: #000080;
+  border: 1px solid #ff0 !important;
 }
 
 .custom-select::after {
@@ -2928,6 +2962,13 @@ label[for="contrastSelect"] {
 .high-c .btn-setting:hover {
   background-color: #131516 !important;
   border-color: #fff;
+}
+
+.inv-c .btn-setting:focus,
+.inv-c .btn-setting:hover {
+  background-color: #ff0 !important;
+  border-color: ff0;
+  color: navy !important;
 }
 
 .btn-group-settings .btn-setting:first-child {
@@ -4261,7 +4302,14 @@ fieldset {
   }
 
   .navbar-invisible {
-    opacity: 0; /*transition:all ease 0.5s;*/
+    opacity: 1; /*transition:all ease 0.5s;*/
+    background: #171745;
+  }
+
+  @media screen and (max-device-width: 480px) {
+    .navbar-invisible {
+      opacity: 0; /*transition:all ease 0.5s;*/
+    }
   }
 
   .navbar-visible {
@@ -4271,9 +4319,8 @@ fieldset {
 
   .slide-counter {
     position: fixed;
-    background: #fff;
-    color: #0b1b34;
-    padding: 5px;
+    color: #fff;
+    padding: 9px;
     right: 0;
     bottom: 0;
     z-index: 999; /* Note Marie : à modifier plus intelligemment lors du refacto de la toolbar */
@@ -5147,8 +5194,9 @@ fieldset {
   }
 
   #cpt {
-    background: #a0b0bd;
-    color: #fff;
+    background: #171745;
+    color: #00b2f8;
+    border-radius: 0;
   }
 
   .high-c #cpt {
@@ -5159,10 +5207,14 @@ fieldset {
     height: auto;
   }
 
+  #navbar {
+    width: 100%;
+  }
+
   #navbar li {
-    border-top: 1px solid #ef5565;
-    border-left: 1px solid #ef5565;
-    border-right: 1px solid #ef5565;
+    border-bottom: 1px solid #171745;
+    border-left: 1px solid #171745;
+    border-right: 1px solid #171745;
     background-color: #fff;
   }
 
@@ -5531,11 +5583,6 @@ fieldset {
   }
 }
 
-.twitter-tweet {
-  margin-right: auto;
-  margin-left: auto;
-}
-
 .font-small {
   font-size: 75%;
 }
@@ -5553,19 +5600,23 @@ fieldset {
 }
 
 .dcube-quote::before {
-  content: open-quote;
-  font-size: 2em;
-  color: #00587b;
-  line-height: 0;
-  vertical-align: sub;
+  content: "";
+  height: 35px;
+  width: 30px;
+  background: url(img/icons/quote-left.svg) bottom center no-repeat;
+  position: absolute;
+  margin-top: -10px;
+  margin-left: -40px;
 }
 
 .dcube-quote::after {
-  content: close-quote;
-  font-size: 2em;
-  color: #00587b;
-  line-height: 0;
-  vertical-align: sub;
+  content: "";
+  height: 35px;
+  width: 30px;
+  background: url(img/icons/quote-right.svg) bottom center no-repeat;
+  position: absolute;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
 .inv-c .dcube-quote::before,
@@ -5576,6 +5627,12 @@ fieldset {
 .high-c .dcube-quote::before,
 .high-c .dcube-quote::after {
   color: #fff;
+}
+
+@media screen and (max-width: 49.99em) {
+  .dcube-quote {
+    width: 70%;
+  }
 }
 
 .high-c .main-logo {
@@ -5600,10 +5657,114 @@ fieldset {
 }
 
 .dcube-video {
-  position: relative;
-  left: 10%;
+  text-align: center;
 }
 
 .dcube-video video {
   width: 100%;
+}
+
+@media screen and (min-width: 64em) {
+  .dcube-video video {
+    width: 70%;
+  }
+}
+
+.dcube-footer {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  display: inline-flex;
+  height: 2.5em;
+  padding-left: 1em;
+}
+
+.dcube-footer div {
+  margin: auto 0;
+  font-size: 85%;
+  margin-right: 1.5em;
+  font-weight: 700;
+}
+
+.dcube-footer a {
+  border-bottom: none;
+  color: white;
+}
+
+.dcube-footer a:focus,
+.dcube-footer a:hover {
+  border-bottom: 0.05em solid;
+  transform: translateZ(0) scale(1);
+}
+
+.dcube-icon {
+  width: 1.2em;
+  margin-right: 0.5em;
+  vertical-align: middle;
+}
+
+.dcube-icon-white {
+  display: inline-flex;
+}
+
+.dcube-icon-blue {
+  display: none;
+}
+
+@media screen and (max-width: 69.99em) {
+  .dcube-footer div {
+    font-size: 65%;
+  }
+}
+
+@media screen and (max-width: 49.99em) {
+  .dcube-footer {
+    position: fixed;
+    background-color: #171745;
+    width: 100%;
+    height: 30px;
+  }
+
+  .dcube-footer div {
+    font-size: 0.7em;
+    line-height: 3;
+  }
+
+  .dcube-icon-white {
+    display: none;
+  }
+
+  .dcube-icon-blue {
+    display: inline-flex;
+  }
+
+  .dcube-footer a,
+  .dcube-icon {
+    color: #00b2f8;
+  }
+}
+
+.twitter-tweet {
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 80% !important;
+  background: #f2f3f4;
+  padding: 1em;
+}
+
+.twitter-tweet::before {
+  content: "";
+  height: 35px;
+  width: 30px;
+  background: url(img/icons/twitter.svg) bottom center no-repeat;
+  position: absolute;
+  margin-top: -1.8em;
+  margin-left: -1.5em;
+}
+
+@media screen and (max-width: 69.99em) {
+  .twitter-tweet::before {
+    margin-top: -2em;
+    margin-left: -2em;
+  }
 }
